# aluso-labels

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md
aluso_label/: __init__.py  _utils.py  event.py  people.py
aluso_label/latex/: __init__.py  label_geometry.py  label_properties.py  latex_document.py
app/: __init__.py  asgi.py  help.py  help_page.py  index.py  main.py  process.py  upload.py  wsgi.py
app/static/styles/: buttons.css  buttons.custom.css  style.css
app/templates/: error.html  help.html  layout.html  overleaf.html  process.html  upload.html
